# sfcpl2

./: .gitignore  Cargo.toml  Pipfile  README.md  sync_cargo_manifest.py
crates/binary-search/: Cargo.toml
crates/binary-search/src/: lib.rs  range.rs  slice.rs
crates/bit-enum/: Cargo.toml
crates/bit-enum-search/: Cargo.toml
crates/bit-enum-search/src/: lib.rs
crates/bit-enum/src/: lib.rs
crates/bitset/: Cargo.toml
crates/bitset/src/: lib.rs
crates/brute-bits/: Cargo.toml
crates/brute-bits/src/: lib.rs
crates/digitex/: Cargo.toml
crates/digitex/src/: dynamic.rs  lib.rs  static.rs
crates/graph/: Cargo.toml
crates/graph/src/: bfs.rs  dfs.rs  dijkstra.rs  lib.rs
crates/linear-match/: Cargo.toml
crates/linear-match/src/: lib.rs
crates/prime/: Cargo.toml
crates/prime/src/: atkin.rs  erathosthnes.rs  lib.rs
crates/rle/: Cargo.toml
crates/rle/src/: lib.rs
crates/rolling-hash/: Cargo.toml
crates/rolling-hash/src/: lib.rs
crates/rolling_hash/: Cargo.toml
crates/rolling_hash/src/: lib.rs
crates/run-length-encoding/: Cargo.toml
crates/run-length-encoding/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  timer.rs
crates/sieve/: Cargo.toml
crates/sieve/src/: atkin.rs  erathosthnes.rs  lib.rs
crates/sparse-table/: Cargo.toml
crates/sparse-table/src/: lib.rs
crates/suffix-array/: Cargo.toml
crates/suffix-array/src/: lib.rs
crates/unique-count/: Cargo.toml
crates/unique-count/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs  math.rs  runner.rs  timer.rs  traits.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  lib.rs  util.rs
