[package]
name = "sfcpl2"
version = "0.1.0"
authors = ["Yuta Sadamori <yutapypy0930@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Loptall/sfcpl2"

[workspace]
members = ["./crates/*"]
exclude = []

[dependencies]
bitset = { path = "./crates/bitset" }
brute-bits = { path = "./crates/brute-bits" }
digitex = { path = "./crates/digitex", features = ["atcoder"] }
graph = { path = "./crates/graph" }
prime = { path = "./crates/prime" }
rolling-hash = { path = "./crates/rolling-hash" }
runner = { path = "./crates/runner" }
sparse-table = { path = "./crates/sparse-table" }
suffix-array = { path = "./crates/suffix-array" }
util = { path = "./crates/util" }

[dev-dependencies]
rand = "=0.7.3"
