[package]
name = "xtask"
version = "0.1.0"
authors = ["Yuta Sadamori <yutapypy0930@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  "3.0.0-beta.2"
anyhow = "1.0.40"
glob = "0.3.0"
toml_edit = "0.2.0"
