[package]
name = "suffix-array"
version = "0.1.0"
authors = ["Yuta Sadamori <yutapypy0930@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unique-count = { path = "../unique-count" }
util = { path = "../util" }

[dev-dependencies]
proconio = "0.4.2"
